# ve

./: CMakeLists.txt  README.md
.github/workflows/: post-commit.yml
examples/: 01-simple-xy.cpp  CMakeLists.txt
include/: ve.hpp
include/ve/: point.hpp  vector.hpp
include/ve/internal/: pod_wrapper.hpp
tests/: 01-xy-and-rgb.cpp  01-xy.cpp  CMakeLists.txt
